# MediaGrabber

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  IMPLEMENTATION_PROGRESS.md  README.md  README_zh.md  build_and_run.sh  deploy.sh  media_grabber.py  media_grabber_web.py  pyproject.toml  requirements.txt  test_media_grabber.py  update_app.py
.claude/: settings.local.json
.gitea/workflows/: ci-cd.yml
.github/agents/: code-review.agent.md  copilot-instructions.md  speckit.tasks.agent.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: PLAYLIST_SELECTION_FEATURE.md  TEST_RESULTS.md  __init__.py  media_grabber.py  media_grabber_web.py  pyproject.toml  requirements.txt  test_integration.py  test_media_grabber.py  test_playlist.py  test_playlist_selection.py
backend/app/: __init__.py  __main__.py  web.py
backend/app/api/: downloads.py  request_validators.py
backend/app/cli/: __init__.py  main.py  progress_renderer.py
backend/app/models/: __init__.py  download_job.py  playlist_package.py  progress_state.py  transcode_profile.py
backend/app/services/: __init__.py  download_service.py  output_manager.py  playlist_packager.py  progress_bus.py  progress_store.py  remediation.py  retry_policy.py  transcode_queue.py  transcode_service.py
backend/app/utils/: __init__.py  settings.py
backend/cookies/: README.md
backend/lab/: alternative_download_poc.ipynb  quick_test.py
backend/tests/: conftest.py  diagnose_mobile_compat.sh  test_instagram_full_flow.sh  test_transcode_profiles.sh
backend/tests/contract/: __init__.py  test_cli_commands.py  test_downloads_api.py  test_progress_api.py
backend/tests/integration/: test_cli_retry_scenarios.py  test_cli_youtube_pipeline.py  test_full_pipeline.py  test_low_disk.py  test_media_grabber.py  test_rest_social_pipeline.py  test_results.json  update_test_results.py
backend/tests/unit/cli/: test_progress_renderer.py
backend/tests/unit/services/: test_download_service_social.py  test_download_service_youtube.py  test_instagram_transcode.py  test_output_manager.py  test_playlist_packager.py  test_progress_store.py  test_remediation.py  test_retry_policy.py  test_transcode_service.py
backend/tests/unit/utils/: test_logging_format.py
docs/: CICD.md  migration.md  observability.md  release-notes.md
frontend/: index.html  package-lock.json  package.json  prototype.html  tailwind.config.js  vite.config.js  vitest.config.ts
frontend/src/: App.svelte  custom-bulma.scss  main.js
frontend/tests/: App.test.ts  downloads.test.ts
scripts/: .env.docker.example  Dockerfile  build-docker.sh  deploy.sh  docker-run.sh  run_cli_youtube_benchmarks.py  run_rest_social_benchmarks.py  startup.sh
specs/001-download-pipeline-refactor/: spec.md
specs/002-download-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-download-refactor/checklists/: playlist-experience.md  requirements.md
specs/002-download-refactor/contracts/: downloads.openapi.yaml
templates/: index.html
(+1 files in other folders)
