[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MediaGrabber"
version = "0.1.0"
description = "A media grabbing application."
authors = [{ name = "Brian Han", email = "sacahan@gmail.com" }]
license = "MIT"
requires-python = ">=3.9"

dependencies = [
    "Flask>=2.0",
    "yt-dlp==2025.10.1.232815.dev0",
    "tqdm",
    "Flask-CORS",
    "gunicorn",
    "pre-commit",
    "ruff",
]

[tool.setuptools]
py-modules = ["media_grabber", "media_grabber_web"]
