[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MediaGrabber"
version = "0.1.0"
description = "A media grabbing application."
authors = [{ name = "Brian Han", email = "sacahan@gmail.com" }]
license = "MIT"
requires-python = ">=3.10"

dependencies = [
    "Flask>=2.0",
    "yt-dlp>=2025.0.0",
    "pytubefix>=10.3.5",
    "tqdm",
    "Flask-CORS",
    "gunicorn",
    "pre-commit",
    "ruff",
    "jupyter>=1.1.1",
    "ipykernel>=7.1.0",
    "playwright>=1.56.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ffmpeg = [
    "ffmpeg-python>=0.2.0",
    "python-ffmpeg>=2.0.0",
]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools]
py-modules = ["media_grabber", "media_grabber_web"]
